--- a/gut/environments.tex
+++ b/gut/environments.tex
@@ -43,6 +43,7 @@ A mistake that is often made is, there is a blank line between the \code{\end{mi
 \end{latex}
 
 \subsection{Others}
-For \coden{abstract}, \coden{titlepage}, \coden{thebibliography}, see \nameref{docStructure}.
+For \coden{abstract}, \coden{titlepage}, \coden{thebibliography}, see
+\nameref{docStructure} (page \pageref{docStructure}).
 
 For math stuff, see \nameref{math}\footnote{Natürlich}.
