--- a/gut/macro_def.tex
+++ b/gut/macro_def.tex
@@ -1,10 +1,11 @@
-\sectionNoncurs{Macro definitions}
+\vspace{-1cm}
+\section[Macro definitions]{Macro definitions \noncurs}
+\vspace{-.2cm}
 \begin{latex}
   \newcommand{\mat}[1]{\mathcal{M}_{#1}(\mathbb{R})}
 % this "*" makes it that it complains if a \par is encountered
 \newcommand*{\dx}[1][x]{\, \mathrm{d}#1}
 \renewcommand{\contentsname}{Cuprins}
-
 
 \usepackage{xparse}
 % O, o optional, m= mandatory
