--- a/gut/romanian_names.tex
+++ b/gut/romanian_names.tex
@@ -1,5 +1,5 @@
 \section{Romanian Names and diacritics}
-\subsection[Quick way]{Quick way \noncurs}
+\subsection[Quick way]{Quick way - not useful for exam}
 
 \code{\usepackage[romanian]{babel}}
 
