--- a/math/environments.tex
+++ b/math/environments.tex
@@ -112,8 +112,8 @@ Nice spacing:\\
 %  {\partial #2}}
 \[f(x, y) =
 \begin{dcases}
-  \parti{g}{x}\,,&\text{daca } x y \geq 0,\\[0.5em]
-  \parti{g}{y}\,,&\text{daca } x y < 0,
+\parti{g}{x}\,,&\text{daca } x y \geq 0,\\[.5em]
+\parti{g}{y}\,,&\text{daca } x y < 0,
 \end{dcases}
 \]
 \end{example}
