--- a/math/other.tex
+++ b/math/other.tex
@@ -1,4 +1,5 @@
 \subsection*{Limits}
+\vspace{-.4cm}
 \begin{longtable}{l l}
 \mtshow{\lim_{x \to \infty}}
 \mtshow{\lim\limits_{x \to \infty}}
@@ -89,11 +90,5 @@ or, if it's used frequently, add this in preamble to make all look like this:\\
 $\int f(x)\,dx$ vs $\int f(x) dx$ 
 $(x - y) \in \R, \quad \forall x, y \in \R$
 \end{example}
-
-\begin{enumerate}
-\item Text over and under arrows:\\
-\item Theorems:
-  \package{amsthm}
-\end{enumerate}
 
 
