--- a/math/symbols.tex
+++ b/math/symbols.tex
@@ -2,7 +2,7 @@
 \subsection*{Regular}
 \codeshow{$+ - = ! / ( ) [ ] < > | ' : *$}
 \subsection*{Greek}
-Only showing peculiar symbols. Most have intuitive names.\\
+Only showing a few peculiar symbols. Most have intuitive names.\\
 \begin{example}
 \[\begin{matrix}
   \gamma & \eta    & \kappa\\
@@ -91,7 +91,7 @@ P\left(A=2\middle|\frac{A^2}{B}>4\right)
   \codeshowD{\tilde{a}}{\underline{a}}\\
   \codeshowD{\underset{u}{abc}}{\overset{o}{abc}}\\
   \codeshowD{\underbrace{abc}}{\overbrace{abc}}\\
-  \mtshow{\stackrel\frown{AAA}}
+    \codeshowD{\stackrel\frown{AAA}}{\vec{a}}
 \end{longtable}
 E.g.:\\
 \begin{example}
@@ -163,6 +163,7 @@ E.g.:\\
   \codeshowD{\nearrow}{\searrow} & \codeshowD{\swarrow}{\nwarrow}\\
 \end{tabular}
 \subsubsection*{Other symbols}
+\vspace{-.4cm}
 \begin{longtable}{l l | l l | ll | ll | ll | ll}
   \codeshowD{\partial}{\imath}&
   \codeshowD{\Re}{\nabla}&
@@ -181,7 +182,7 @@ E.g.:\\
 More non-math symbols are at page \pageref{othersymb}.
 
 \subsubsection*{Misc}
-
+\vspace{-.4cm}
 \begin{longtable}{l l}
 \mtshow{x \equiv a \pmod{b}}
 \mtshow{a \bmod{b}}
