--- a/rest/doc_structure.tex
+++ b/rest/doc_structure.tex
@@ -73,6 +73,13 @@ bla
 Bla bla
 \end{abstract}
 \end{latex}
+\newpage
+\subsection{Table of \texttt{X}}
+\begin{latex}
+\tableofcontents
+\listoffigures
+\listoftables
+\end{latex}
 
 \subsection{Bibliography}
 \begin{minipage}{0.6\textwidth}
@@ -115,6 +122,8 @@ Doing it like this groups them:  \index{Convergenta!in $L^{p}$}
 \end{latex}
 
 \subsection{Pdfbookmark}
+Requires packages: \code{hyperref, bookmark}
+
 \begin{latex}
 \pdfbookmark[1]{Cuprins}{Cuprins}
 \end{latex}
