--- a/tables.tex
+++ b/tables.tex
@@ -104,7 +104,7 @@ We have a nice table below:
 \hspace{20pt}
 \begin{tabular}[c]{|l|| *9{l|} }\hline
   Country & Best song & Known for \\\hline\hline
-  Russia & Siuda Kalatuszek & Putin's lifetime rule \\\hline
+  Russia & Smuglianka & Putin's lifetime rule \\\hline
   Serbia & Crni Bombarder & Rakija and Kosovo \\\hline
   Poland & Hej soko\l{}y & Bisons and their grass \\\hline
   Finland & S\"akkij\"arven polkka & Suomi Perkele \\\hline
