--- a/gut/footnotes.tex
+++ b/gut/footnotes.tex
@@ -23,15 +23,18 @@ In \book and \report footnotes are reset every chapter, to number them continuou
 \code{\counterwithout{footnote}{chapter}}\footnote{Requires the package \code{chngcntr}}
 
 \subsection{Forcing footnotes when it doesn't work}
-In math mode\footnote{but not in the \code{equation} environment} and tables
-\code{\footnote} doesn't work. Instead use \codeshow{\footnotemark[18]}
-\codeshow{\footnotetext[18]{Hi there}}
+In math mode\footnote[19]{but not in the \code{equation} environment} and tables
+\code{\footnote} doesn't work.\\
+Instead use: \code{\footnotemark[18] ... \footnotetext[18]{hi}}.
+\\
+\begin{example5}
 \begin{tabular}{l l}
-  \codeeg{foo\footnote{not shown}} & this is inside a table\\
-  \codeeg{bar\footnotemark} & this is inside a table\\
-  \codeeg{baz\footnotemark} & this is inside a table\\
+  bar\footnotemark & I'm a table \\
+  baz\footnotemark & Very tabley\\
 \end{tabular}
-\codeeg{\footnotetext{Now shown}}\\
+\footnotetext{Now shown}\\
+\end{example5}
+
 \note{Using multiple \code{\footnotemark}s might not number them properly}\\
 \codeeg{\footnotetext{Now shown 2}}
 
