--- a/gut/misc.tex
+++ b/gut/misc.tex
@@ -23,7 +23,7 @@ It can be useful to do something like this:
 <The table of contents, introduction ...>
 \pagenumbering{arabic}
 \end{latex}
-
+\pagebreak
 \subsection{Self explanatory}
 \begin{latex}
 \include{smth.txt}
