--- a/gut/packages.tex
+++ b/gut/packages.tex
@@ -90,6 +90,7 @@ To number them separately but within the same main number use \code{subfigure}
     \c{s}i \textit{Relativitate} de M.C. Escher (1953)}\label{Stema_Escher4}}
 \end{figure}
 \end{latex}
+\pagebreak
 \subsection{Fancy quotes \& Unicode}
 \begin{latex}
 \usepackage[T1]{fontenc}
