--- a/gut/references.tex
+++ b/gut/references.tex
@@ -34,6 +34,7 @@ e.g. \code{\phantomsection\label{bLabel}}
 \subsection{Settings}
 Using \code{\usepackage[hidelinks]{hyperref}} will make links black.
 \subsubsection{Short way}
+\vspace{-.5cm}
 \begin{latex}
 \hypersetup{colorlinks=true, linkcolor=cyan, citecolor=green,
   filecolor=black, urlcolor=blue}
