--- a/gut/romanian_names.tex
+++ b/gut/romanian_names.tex
@@ -18,7 +18,7 @@
 \renewcommand{\listfigurename}{Lista de figuri}
 \end{latex}
 
-\note{don't combine The Long way with The Quick way.}
+\note{don't combine The Long way with The Quick way. (Nor Żubrówka with other things.)}
 
 \subsectionNoncurs{Proper diacritics}
 \package{combelow}\\
