--- a/math/environments.tex
+++ b/math/environments.tex
@@ -34,7 +34,7 @@ Like align but used inside math mode. Useful for numbering multiple lines once.
 \begin{example}
 \begin{equation}
 \begin{aligned}
-  a & = 3\\
+  \pi & = 3\\
     & = 2 + \sigma(0)
 \end{aligned}
 \end{equation}
@@ -47,7 +47,7 @@ People on the internet say ``don't use \code{eqnarray}'' so we won't talk about 
 \begin{example}
 \begin{subequations}
 \begin{align}
-  a &= 3\\
+  \pi &= 3\\
   &= 2 + \sigma(0)
 \end{align}
 \end{subequations}
@@ -58,7 +58,7 @@ or:
 \begin{example}
 \begin{subequations}
 \begin{equation}
-  a = 3\label{blasphemy}
+  \pi = 3\label{blasphemy}
 \end{equation}
 Therefore:
 \begin{equation}
