--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -42,6 +42,7 @@
 \usepackage[utf8]{inputenc}
 
 \definecolor{bg}{gray}{0.96}
+%\definecolor{bg}{gray}{1}
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
